2003-09-08	Derick Hammond <derick@perkinstechnologies.com.au>

	PR 484/rtems
	* src/threadcreateidle.c: Idle task name was initialized incorrectly.

2003-09-08	Mikec Ivica <mikici@acm.org>

	* inline/rtems/score/userext.inl, macros/rtems/score/userext.inl:
	Add missing cast.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/debug.h, include/rtems/seterr.h,
	include/rtems/system.h, include/rtems/score/address.h,
	include/rtems/score/apiext.h, include/rtems/score/apimutex.h,
	include/rtems/score/bitfield.h, include/rtems/score/chain.h,
	include/rtems/score/context.h, include/rtems/score/copyrt.h,
	include/rtems/score/coremsg.h, include/rtems/score/coremutex.h,
	include/rtems/score/coresem.h, include/rtems/score/heap.h,
	include/rtems/score/interr.h, include/rtems/score/isr.h,
	include/rtems/score/mpci.h, include/rtems/score/mppkt.h,
	include/rtems/score/object.h, include/rtems/score/objectmp.h,
	include/rtems/score/priority.h, include/rtems/score/stack.h,
	include/rtems/score/states.h, include/rtems/score/sysstate.h,
	include/rtems/score/thread.h, include/rtems/score/threadmp.h,
	include/rtems/score/threadq.h, include/rtems/score/tod.h,
	include/rtems/score/tqdata.h, include/rtems/score/userext.h,
	include/rtems/score/watchdog.h, include/rtems/score/wkspace.h,
	inline/rtems/score/address.inl, inline/rtems/score/chain.inl,
	inline/rtems/score/coremsg.inl, inline/rtems/score/coremutex.inl,
	inline/rtems/score/coresem.inl, inline/rtems/score/heap.inl,
	inline/rtems/score/isr.inl, inline/rtems/score/mppkt.inl,
	inline/rtems/score/object.inl, inline/rtems/score/objectmp.inl,
	inline/rtems/score/priority.inl, inline/rtems/score/stack.inl,
	inline/rtems/score/states.inl, inline/rtems/score/sysstate.inl,
	inline/rtems/score/thread.inl, inline/rtems/score/threadmp.inl,
	inline/rtems/score/tod.inl, inline/rtems/score/tqdata.inl,
	inline/rtems/score/userext.inl, inline/rtems/score/watchdog.inl,
	inline/rtems/score/wkspace.inl, macros/rtems/score/address.inl,