@@ -1,3 +1,10 @@
+2003-09-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	PR 489/rtems
+	* include/rtems/score/thread.h: Change struct 
+	Thread_Control_struct.libc_reent to using struct _reent*.
+	* inline/rtems/score/thread.inl: Reflect change above.
+
 2003-09-08	Derick Hammond <derick@perkinstechnologies.com.au>
 
 	PR 484/rtems
